finished rosserial section

--- a/Arduino.tex
+++ b/Arduino.tex
@@ -95,7 +95,7 @@ As the motor spins the gear shaft, the code disk turns with it. This produces an
 The number of slits in the code disk corresponds directly to how many pulses each channel will produce in one revolution of the DC motor. This is known as the pulses per revolution (PPR), and is given by the manufacturer. By counting how many pulses occur in one second, and using the PPR, one can calculate the angular speed of the motor. If one wishes for greater resolution, they can watch each square wave for a change in voltage from LOW to HIGH or HIGH to LOW. This gives a maximum resolution of \(4 * PPR\) detectable position increments per revolution.
 
 \begin{figure}[h]
-	\caption{\cite{fig_quad_channels}}
+	\caption{\cite{encoderBlog}}
 	\centering
 	\includegraphics[width=\textwidth]{quadrature}
 	\label{FigQuadChannels}
