--- a/FutureSteps.tex
+++ b/FutureSteps.tex
@@ -1,5 +1,13 @@
 \chapter{Future Steps}
 
+\section{Field Test scenario}
+
+\subsection{Results}
+
+Used virtual\_joystick node with other differential\_drive control nodes to drive rover around a parking lot. Recorded data into a ROS bag file, which is ...
+
+here is route fitted on top of satellite image of that parking lot:
+
 \section{ROS Navigation Stack}
 
 \subsection{ros\_controller}
@@ -9,7 +17,7 @@
 	\label{fig:ros_controller}
 \end{figure}
 
-\section{Field Test scenario}
+
 
 \subsection{GPS Waypoints}
 GPS markers form a linearized path
