--- a/mainBib.bib
+++ b/mainBib.bib
@@ -72,7 +72,7 @@ url = {http://web.archive.org/web/20160324141917/http://www.robotshop.com/media/
    journal = "USB Implementers Forum, Inc.",
    type = "Online",
    year = 2017,
-   url = {http://web.archive.org/web/20170225172623/http://www.usb.org/developers/usbfaq\#cab1},
+   url = {http://web.archive.org/web/20170225172623/http://www.usb.org/developers/usbfaq#cab1},
 }
 
 @MISC{fig_lynxmotion_rover,
