--- a/mainBib.bib
+++ b/mainBib.bib
@@ -23,6 +23,13 @@
    url = {http://web.archive.org/web/20160915053759/http://www.tigoe.com:80/pcomp/code/circuits/motors/controlling-dc-motors/},
 }
 
+@MISC{differentialSteeringPaper,
+   author = "G.W. Lucas",
+   title = "A Tutorial and Elementary Trajectory Model for the Differential Steering System of Robot Wheel Actuators",
+   journal = "The Rossum Project",
+   url = {http://web.archive.org/web/20170120154230/http://rossum.sourceforge.net/papers/DiffSteer/},
+}
+
 @MISC{encoderBlog,
    author = "Nich Fugal",
    title = "Efficiently Reading Quadrature With Interrupts",
